Added plugin remote theme

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,6 +28,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 remote_theme: slate
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
