--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,7 +25,7 @@ baseurl: "/pensjon-ekstern-api" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-remote_theme: slate
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
