Security scheme ufore

--- a/docs/api/uforetrygd/uforetrygd-api.yaml
+++ b/docs/api/uforetrygd/uforetrygd-api.yaml
@@ -222,3 +222,8 @@ components:
           type: string
           format: YYYY-mm-DD
           example: "2024-01-01"
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
