--- a/docs/api/afpgrunnlagbeholdning/afp-grunnlag-beholdning-api.yaml
+++ b/docs/api/afpgrunnlagbeholdning/afp-grunnlag-beholdning-api.yaml
@@ -82,10 +82,24 @@ components:
           format: YYYY-mm-DD
           example: "2024-01-01"
     AfpGrunnlagBeholdningResponse:
-      type: array
+      type: object
       description: Returnerer alle AFP Beholdning Grunnlag perioder for gitt personId fra og med dato. AFP Beholdning Grunnlag-perioder gjelder fra 1. januar (der opptjening 2 år før blir godskrevet) til og med 30. april. Og fra 1. mai der AFP Beholdning Grunnlag lønnsvekstreguleres til og med 31. desember.
-      items:
-        $ref: '#/components/schemas/AfpGrunnlagBeholdningPeriode'
+      properties:
+        personId:
+          type: string
+          description: Fødselsnummer, 11 siffer
+          example: "01234567890"
+        afpGrunnlagBeholdninger:
+          type: array
+          items:
+            $ref: '#/components/schemas/AfpGrunnlagBeholdningPeriode'
+          example:
+            - fraOgMedDato: "2024-01-01"
+              tilOgMedDato: "2024-04-30"
+              belop: 123456
+            - fraOgMedDato: "2024-05-01"
+              tilOgMedDato:
+              belop: 234567
     AfpGrunnlagBeholdningSimuleringRequest:
       type: object
       properties:
@@ -102,6 +116,11 @@ components:
           description: Liste med inntekter med inntekstår og beløp for hvert år
           items:
             $ref: '#/components/schemas/InntektPeriode'
+          example:
+            - inntektAr: 2023
+              belop: 100000
+            - inntektAr: 2024
+              belop: 120000
     InntektPeriode:
       type: object
       properties:
@@ -112,10 +131,33 @@ components:
           type: number
           example: 100000
     AfpGrunnlagBeholdningSimuleringResponse:
-      type: array
+      type: object
       description: Returnerer alle AFP Beholdning Grunnlag perioder for gitt personId fra og med dato. De fremtidige AFP Beholdning Grunnlag periodene inkluderer godskriving av de simulerte inntektene og tilsvarende regulerte perioder. (NB. Må sjekke om beholdning skal reguleres ved simulering og evt. hvilken lønssvekstfaktor som skal benyttes i reguleringen.)
-      items:
-        $ref: '#/components/schemas/AfpGrunnlagBeholdningPeriode'
+      properties:
+        personId:
+          type: string
+          description: Fødselsnummer, 11 siffer
+          example: "01234567890"
+        afpGrunnlagBeholdninger:
+          type: array
+          items:
+            $ref: '#/components/schemas/AfpGrunnlagBeholdningPeriode'
+          example:
+            - fraOgMedDato: "2024-01-01"
+              tilOgMedDato: "2024-04-30"
+              belop: 123456
+            - fraOgMedDato: "2024-05-01"
+              tilOgMedDato: "2024-12-31"
+              belop: 234567
+            - fraOgMedDato: "2025-01-01"
+              tilOgMedDato: "2025-04-30"
+              belop: 345678
+            - fraOgMedDato: "2025-05-01"
+              tilOgMedDato: "2025-12-31"
+              belop: 456789
+            - fraOgMedDato: "2026-01-01"
+              tilOgMedDato:
+              belop: 567890
     AfpGrunnlagBeholdningPeriode:
       type: object
       properties:
@@ -125,6 +167,8 @@ components:
           example: "2024-01-01"
         tilOgMedDato:
           type: string
+          description: Dersom feltet er NULL betyr det at beholdningen er gjeldede frem til neste fremtidige/potensielle endring, og at den på nåværende tidspunkt er den som gjelder til evig tid.
+          nullable: true
           format: YYYY-mm-DD
           example: "2024-04-30"
         belop:
