Oppdaterer SøkerDto for fellesordningen dokumentasjon. Skal returnere liste med sokerdetalj og merknad.

--- a/docs/api/fellesordningen/fellesordningen.yaml
+++ b/docs/api/fellesordningen/fellesordningen.yaml
@@ -178,9 +178,13 @@ components:
       type: object
       properties:
         Sokere:
-          $ref: '#/components/schemas/Sokerdetaljer'
+          items:
+            $ref: '#/components/schemas/Sokerdetaljer'
+          type: array
         Merknader:
-          $ref: '#/components/schemas/Merknad'
+          items:
+            $ref: '#/components/schemas/Merknad'
+          type: array
     Merknad:
       title: Merknad
       type: object
