--- a/docs/api/fellesordningen/fellesordningen.yaml
+++ b/docs/api/fellesordningen/fellesordningen.yaml
@@ -170,7 +170,8 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Vedtak'
+                items:
+                  $ref: '#/components/schemas/Vedtak'
 components:
   schemas:
     SokereDto:
